--- a/MerlionPortal/MerlionPortal-war/web/oes/requestforreturn.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/requestforreturn.xhtml
@@ -2,12 +2,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-          <h:form id="formMain">  
+        <h:form id="formMain">  
             <p:menubar>
                 <p:menuitem value="HOME" url="oesindexpage.xhtml"/>
                 <p:menuitem value="PRODUCTS" url="displayallproducts.xhtml" />
@@ -24,9 +25,77 @@
                 <p:submenu label="REPORTS" >
                 </p:submenu>
             </p:menubar>
-            <br/>
+            <br></br> 
+            <p:commandButton value="Search" actionListener="#{productReturnManagedBean.searchForOrder()}" update="orderDetail" ajax="true">
+            </p:commandButton>           
         </h:form>
-        
+        <h:form>
+        <p:panel header="Reject Purchase Order" style="margin-bottom:10px;">
+            <h:panelGrid columns="2" cellpadding="5">
+                <p:outputLabel for="Reason" value="Reject Reson " />
+                <p:selectOneMenu id="reson" value="#{salesOrderManagedBean.reason}" style="width:150px">
+                    <f:selectItem itemLabel="Select Reject Reson" itemValue="" noSelectionOption="true" />
+                    <f:selectItems value="#{salesOrderManagedBean.rejectReasons}" />
+                </p:selectOneMenu>
+            </h:panelGrid>
+            <p:separator />
+            <p:commandButton value="Reject this Order" update="msgs" actionListener="#{salesOrderManagedBean.rejectPo()}" icon="ui-icon-check" />
+        </p:panel>
+        </h:form>
+
+        <h:form id="orderDetail">
+            <p:fieldset legend="Comany Information" style="margin-bottom:20px">
+                <h:panelGrid columns="2" cellpadding="5">
+                    <h4>   Company Name: </h4><h:outputText value="#{productReturnManagedBean.customerInfor.get(0)}"/>
+                    <h4>        Address: </h4><h:outputText value="#{productReturnManagedBean.customerInfor.get(1)}"/>
+                    <h4> Contact Person: </h4><h:outputText value="#{productReturnManagedBean.customerInfor.get(2)}"/>
+                    <h4> Contact Number: </h4><h:outputText value="#{productReturnManagedBean.customerInfor.get(3)}"/>
+                </h:panelGrid>
+            </p:fieldset>
+            <p:fieldset legend="Ship To " style="margin-bottom:20px">
+                <h:panelGrid id="detail" columns="2" cellpadding="5">
+                    <p>Contact Person: </p><h:outputText value="#{productReturnManagedBean.myOrder.contactPersonName}"/>
+                    <p>Phone Number: </p><h:outputText value="#{productReturnManagedBean.myOrder.contactPersonPhoneNumber}"/>
+                    <p>Address : </p><h:outputText value="#{productReturnManagedBean.myOrder.shipTo}"/>
+                    <p>Quotation : </p><h:outputText value="#{productReturnManagedBean.myOrder.quotationId}"/>
+
+                </h:panelGrid>
+            </p:fieldset>
+            <br></br>
+            <p>Status : </p><h:outputText id="orderstatus" value="#{orderDetailMangedBean.displayStatus()}"/>
+            <br></br>
+            <br></br>
+            <p:dataTable var="lineItem" value="#{productReturnManagedBean.myOrder.productOrderLineItemList}">
+                <p:column headerText="Product">
+                    <h:outputText value="#{lineItem.productproductId.productName}" />
+                </p:column>
+
+                <p:column headerText="Description">
+                    <h:outputText value="#{lineItem.productproductId.description}" />
+                </p:column>
+
+                <p:column headerText="Category">
+                    <h:outputText value="#{lineItem.productproductId.category}" />
+                </p:column>
+                <p:column headerText="Unit Price">
+                    <h:outputText value="#{lineItem.price}" />
+                </p:column>
+                <p:column headerText="Quantity">
+                    <h:outputText value="#{lineItem.quantity}" />
+                </p:column>
+                <p:column headerText="Value">
+                    <h:outputText value="#{lineItem.quantity*lineItem.price}" />
+                </p:column>
+                <p:column headerText="Reject">
+                    <h:outputText value="#{lineItem.quantity*lineItem.price}" />
+                </p:column>
+
+            </p:dataTable>
+            <br></br>
+            <p:commandButton action="displayallso.xhtml" value="Go Back">
+            </p:commandButton>  
+        </h:form>
+
     </h:body>
 </html>
 
