--- a/MerlionPortal/MerlionPortal-war/web/oes/displayallso.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/displayallso.xhtml
@@ -8,7 +8,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h1>All Quotation </h1>
+        <h1>All Order </h1>
         <h:form id="formMain">  
             <p:growl id="messages"/>        
             <p:menubar>
