--- a/MerlionPortal/MerlionPortal-war/web/index.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/index.xhtml
@@ -61,9 +61,9 @@
                     </div>
                 </div>
                 <!-- Footer -->
-                <ui:insert name="footer" >
+<!--                <ui:insert name="footer" >
                     <ui:include src="/templates/snippets/footer.xhtml" />
-                </ui:insert>
+                </ui:insert>-->
             </h:panelGroup>
             <script type="text/javascript">
                 PrimeFaces.validator['custom.emailValidator'] = {
