integration of MRP II home and add new product

--- a/MerlionPortal/MerlionPortal-war/web/mrp/addnewproduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/addnewproduct.xhtml
@@ -3,27 +3,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Add New Product</title>
-        <style type="text/css">
-            .gritter-notice-wrapper {
-                left:200px;
-                top: 50px;
-            }
-        </style>
-        <style>
-            h1   {color:#E9967A}
-        </style>
-    </h:head>
-    <h:body>
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+    
+    <c:set var="import" value="templateuser.xhtml"/>
+    <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
+        <c:set var="import" value="templateadmin.xhtml"/>
+    </c:if>
+    
+    <ui:composition template="${root}/templates/${import}">        
+        <ui:param name="pageName" value="MRP II Add New Product" />
 
-        <h:form id="formMain">
-            <h1>Welcome to MRP II system</h1>
-            <p:megaMenu  style="margin-top:20px">
-                <p:menuitem value="MRP II" url="mrp.xhtml" />
-                <p:submenu label="Product Management" >
-                    <p:column>
+        <ui:define name="more-imports">
+            <ui:insert>
+                <!--                import CSS style or Javascript here, if any-->
+            </ui:insert>
+        </ui:define>
+
+        <ui:define name="left">
+            <h:form id="formMain">
+                <p:panelMenu>
+                    <p:menuitem value="MRP II" url="mrp.xhtml" />
+                    <p:submenu label="Product Management" styleClass="display:block">
+
                         <p:submenu label="Product Catalog Management">
                             <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
                             <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
@@ -32,18 +35,20 @@
                             <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
                             <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
                         </p:submenu>
-                    </p:column>
-                </p:submenu>
-                <p:submenu label="Material Requirement Planning" >
-                    <p:column>
+
+                    </p:submenu>
+                    <p:submenu label="Material Requirement Planning" styleClass="display:block">
+
                         <p:submenu label="Forecasting">
                             <p:menuitem value="Forecasting" url="forecast.xhtml" />
                         </p:submenu>
-                    </p:column>
-                </p:submenu>
-            </p:megaMenu>
-            <br/>
 
+                    </p:submenu>
+                </p:panelMenu>
+            </h:form>
+        </ui:define>
+
+        <ui:define name="right">
             <p:growl id="growl" showDetail="true" sticky="true" /> 
             <p:panel id="panel" header="Add New Product">
                 <p:ajaxStatus style="width:16px;height:16px;">
@@ -159,8 +164,7 @@
                 <p:commandButton id="btn" value="Save New Product" update="panel" actionListener="#{productManagedBean.saveNewProduct}" ajax="true" />
 
             </p:panel>
-
-        </h:form>
-    </h:body>
+        </ui:define>
+    </ui:composition>
 </html>                 
 
