--- a/MerlionPortal/MerlionPortal-war/web/services.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/services.xhtml
@@ -31,7 +31,7 @@
                                     <br>OES</br>
                                     <br>WMS</br>
                                     <br>TMS</br>
-                                    <br>MRP</br>
+                                    <br>MRP</br>                                   
                                 </div>
                                 <h4 class="service-cost">$7,000/yr</h4>
                                 <button class="btn btn-success" id="1plBuyBtn" onclick="toggleModal();">Buy Now</button>
@@ -43,7 +43,13 @@
                             <img src="img/2pl.jpg" class="service-image" />
                             <div class="caption">
                                 <h2 class="service-title">Package 2</h2>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae scelerisque orci. Nam auctor odio ipsum, vel elementum ex suscipit in. Nam lorem massa, consequat ut euismod et, aliquet nec ante. Donec ultricies ex dapibus lorem congue, in placerat libero eleifend. Aliquam elit nisi, rhoncus pretium justo a, scelerisque condimentum magna. In fermentum ante nec lorem porttitor, vel scelerisque tellus placerat. Integer auctor sem non varius iaculis. Mauris luctus elit sem, nec venenatis ligula vestibulum non. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. .</div>
+                                <div><br>This package is designed to suit the needs of First Party Logistics Service Providers (1PLs) in general.</br>
+                                    <br> By subscribing to this package, your will gain access to the following systems:</br>
+                                    <br>CRMS</br>
+                                    <br>OES</br>
+                                    <br>WMS</br>
+                                    <br>TMS</br>                               
+                                </div>
                                 <h4 class="service-cost">$6,000/yr</h4>
                                 <button class="btn btn-success" id="2plBuyBtn" onclick="toggleModal();">Buy Now</button>
                             </div>
@@ -54,7 +60,12 @@
                             <img src="img/3pl.jpg" class="service-image" />
                             <div class="caption">
                                 <h2 class="service-title">Package 3</h2>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae scelerisque orci. Nam auctor odio ipsum, vel elementum ex suscipit in. Nam lorem massa, consequat ut euismod et, aliquet nec ante. Donec ultricies ex dapibus lorem congue, in placerat libero eleifend. Aliquam elit nisi, rhoncus pretium justo a, scelerisque condimentum magna. In fermentum ante nec lorem porttitor, vel scelerisque tellus placerat. Integer auctor sem non varius iaculis. Mauris luctus elit sem, nec venenatis ligula vestibulum non. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. .</div>
+                                <div><br>This package is designed to suit the needs of Second Party Logistics Service Providers (2PLs).</br>
+                                    <br>By subscribing to this package, your will gain access to the following systems:</br>
+                                    <br>CRMS</br>
+                                    <br>TMS</br>                               
+                                    <br>GRNS</br>                               
+                                </div>
                                 <h4 class="service-cost">$5,000/yr</h4>
                                 <button class="btn btn-success" id="3plBuyBtn" onclick="toggleModal();">Buy Now</button>
                             </div>
@@ -65,7 +76,13 @@
                             <img src="img/4pl.jpg" class="service-image" />
                             <div class="caption">
                                 <h2 class="service-title">Package 4</h2>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae scelerisque orci. Nam auctor odio ipsum, vel elementum ex suscipit in. Nam lorem massa, consequat ut euismod et, aliquet nec ante. Donec ultricies ex dapibus lorem congue, in placerat libero eleifend. Aliquam elit nisi, rhoncus pretium justo a, scelerisque condimentum magna. In fermentum ante nec lorem porttitor, vel scelerisque tellus placerat. Integer auctor sem non varius iaculis. Mauris luctus elit sem, nec venenatis ligula vestibulum non. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. .</div>
+                                <div><br>This package is designed to suit the needs of Third and Fourth Party Logistics Service Providers (3PLs & 4PLs).</br>
+                                    <br>By subscribing to this package, your will gain access to the following systems:</br>
+                                    <br>CRMS</br>
+                                    <br>WMS</br>
+                                    <br>TMS</br>                               
+                                    <br>GRNS</br>                               
+                                </div>
                                 <h4 class="service-cost">6,000/yr</h4>
                                 <button class="btn btn-success" id="4plBuyBtn" onclick="toggleModal();">Buy Now</button>
                             </div>
