--- a/MerlionPortal/MerlionPortal-war/web/services.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/services.xhtml
@@ -76,7 +76,7 @@
                             <img src="img/4pl.jpg" class="service-image" />
                             <div class="caption">
                                 <h2 class="service-title">Package 4</h2>
-                                <div><br>This package is designed to suit the needs of Third and Fourth Party Logistics Service Providers (3PLs & 4PLs).</br>
+                                <div><br>This package is designed to suit the needs of Third and Fourth Party Logistics Service Providers (3PLs and 4PLs).</br>
                                     <br>By subscribing to this package, your will gain access to the following systems:</br>
                                     <br>CRMS</br>
                                     <br>WMS</br>
