--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewtassetschedule.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewtassetschedule.xhtml
@@ -72,7 +72,7 @@
                     </p:row>
                     <p:row>
                         <p:column>
-                            <p:outputLabel for="StartDate" style="font-weight: bold" value="Start Date:   " />
+                            <p:outputLabel for="startDate" style="font-weight: bold" value="Start Date:   " />
                         </p:column>
                         <p:column>
                             <p:inputText required="true" label="startDate" requiredMessage="Start Date is required." id="storageBinName" value="#{tAssetScheduleManagerBean.startDate}">
@@ -82,7 +82,7 @@
                     </p:row>
                     <p:row>
                         <p:column>
-                            <h:outputLabel for="EndDate" style="font-weight: bold" value="End Date:   " />
+                            <h:outputLabel for="endDate" style="font-weight: bold" value="End Date:   " />
                         </p:column>
                         <p:column>
                             <p:inputText required="true" label="endDate" requiredMessage="End Date is required." id="description" value="#{tAssetScheduleManagerBean.endDate}">
