--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
@@ -52,29 +52,29 @@
                         <p:selectOneMenu id="location" value="#{tAssetViewEditManagedBean.locationId}"  style="width:300px" required="true" requiredMessage="Please select a location">
                             <p:ajax listener="#{tAssetViewEditManagedBean.onLocationChange}" update="tAssetData" />
                             <f:selectItem itemLabel="Select Location" itemValue="" noSelectionOption="true" />
-                            <f:selectItems value="#{tAssetViewEditManagedBean.locations}" var="location" itemLabel="ID:#{location.locationId} Name:#{location.locationName}"  itemValue="#{location.locationId}"/>
+                            <f:selectItems value="#{tAssetManagedBean.locations}" var="location" itemLabel="ID:#{location.locationId} Name:#{location.locationName}"  itemValue="#{location.locationId}"/>
                         </p:selectOneMenu>
                     </p:column>
                 </p:row>
             </p:panelGrid>
 
-            <p:dataTable id="tAssetData" var="tAsset" sortMode="multiple" editable="true" value="#{tAssetViewEditManagedBean.tAssets}" 
-                         widgetVar="storageTypesTable"
-                         emptyMessage="No Storage Type found"
+            <p:dataTable id="tAssetData" var="tAsset" sortMode="multiple" editable="true" value="#{tAssetViewEditManagedBean.tassets}" 
+                         widgetVar="transportationAssetTable"
+                         emptyMessage="No Transportation Asset found"
                          rowKey="#{tAsset.assetId}">
 
                 <f:facet name="header">                    
                     <p:outputPanel>
                         <h:outputText value="Search tAsset fields:" />
-                        <p:inputText id="globalFilter" onkeyup="PF('storageTypesTable').filter()" />
+                        <p:inputText id="globalFilter" onkeyup="PF('transportationAssetTable').filter()" />
                     </p:outputPanel>
                 </f:facet>
 
                 <p:ajax event="rowEdit" listener="#{tAssetViewEditManagedBean.onRowEdit}"/>
                 <p:ajax event="rowEditCancel" listener="#{tAssetViewEditManagedBean.onRowCancel}"/>                
 
-                <p:column headerText="TAsset Id" >
-                    <h:outputText value="#{storagetype.warehousewarehouseId.assetId}" />
+                <p:column headerText="Location Id" >
+                    <h:outputText value="#{tAsset.locationlocationId.locationId}" />
                 </p:column>
 
                 <p:column filterBy="#{tAsset.assetId}" filterMatchMode="exact" headerText="TAsset ID" >
@@ -120,8 +120,8 @@
                 </p:column>
 
 
-                <p:column headerText = "Delete Storage Type">
-                    <p:commandButton action="#{tAssetViewEditManagedBean.deleteTAsset(tAsset)}" update="storagetypeData" value="Delete">
+                <p:column headerText = "Delete Transportation Asset">
+                    <p:commandButton action="#{tAssetViewEditManagedBean.deleteTAsset(tAsset)}" update="tAssetData" value="Delete">
                         <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this Transportation Asset?" icon="ui-icon-alert" />
                     </p:commandButton> 
                     <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
