--- a/MerlionPortal/MerlionPortal-war/web/services.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/services.xhtml
@@ -23,15 +23,16 @@
                     <div class="col-md-3">
                         <div class="thumbnail">
                             <img src="img/1pl.jpg" class="service-image" />
-                            <div class="caption">
+                            <div class="caption product-box">
                                 <h2 class="service-title">Package 1</h2>
-                                <div><br>This package is designed to suit the needs of First Party Logistics Service Providers (1PLs) whom are involved in manufacturing.</br>
-                                    <br> By subscribing to this package, your will gain access to the following systems:</br>
-                                    <br>CRMS</br>
-                                    <br>OES</br>
-                                    <br>WMS</br>
-                                    <br>TMS</br>
-                                    <br>MRP</br>                                   
+                                <div class="product-description">
+                                    This package is designed to suit the needs of First Party Logistics Service Providers (1PLs) whom are involved in manufacturing.<br/>
+                                    By subscribing to this package, your will gain access to the following systems:<br/> 
+                                    <span class="badge alert-orange"> OES</span>
+                                    <span class="badge alert-info">CRMS</span>
+                                    <span class="badge alert-success">WMS</span>
+                                    <span class="badge alert-warning">TMS</span>                               
+                                    <span class="badge alert-purple">MRP</span> 
                                 </div>
                                 <h4 class="service-cost">$7,000/yr</h4>
                                 <button class="btn btn-success" id="1plBuyBtn" onclick="toggleModal();">Buy Now</button>
@@ -41,14 +42,16 @@
                     <div class="col-md-3">
                         <div class="thumbnail">
                             <img src="img/2pl.jpg" class="service-image" />
-                            <div class="caption">
+                            <div class="caption product-box">
                                 <h2 class="service-title">Package 2</h2>
-                                <div><br>This package is designed to suit the needs of First Party Logistics Service Providers (1PLs) in general.</br>
-                                    <br> By subscribing to this package, your will gain access to the following systems:</br>
-                                    <br>CRMS</br>
-                                    <br>OES</br>
-                                    <br>WMS</br>
-                                    <br>TMS</br>                               
+                                <div class="product-description">
+                                    This package is designed to suit the needs of First Party Logistics Service Providers (1PLs) in general.<br/>
+                                    By subscribing to this package, your will gain access to the following systems:<br/>
+                                    <span class="badge alert-orange"> OES</span>
+                                    <span class="badge alert-info">CRMS</span>
+                                    <span class="badge alert-success">WMS</span>
+                                    <span class="badge alert-warning">TMS</span>                               
+                                    <span class="badge alert-danger">GRNS</span> 
                                 </div>
                                 <h4 class="service-cost">$6,000/yr</h4>
                                 <button class="btn btn-success" id="2plBuyBtn" onclick="toggleModal();">Buy Now</button>
@@ -58,13 +61,14 @@
                     <div class="col-md-3">
                         <div class="thumbnail">
                             <img src="img/3pl.jpg" class="service-image" />
-                            <div class="caption">
+                            <div class="caption product-box">
                                 <h2 class="service-title">Package 3</h2>
-                                <div><br>This package is designed to suit the needs of Second Party Logistics Service Providers (2PLs).</br>
-                                    <br>By subscribing to this package, your will gain access to the following systems:</br>
-                                    <br>CRMS</br>
-                                    <br>TMS</br>                               
-                                    <br>GRNS</br>                               
+                                <div class="product-description">
+                                    This package is designed to suit the needs of Second Party Logistics Service Providers (2PLs).<br/>
+                                    By subscribing to this package, your will gain access to the following systems:<br/>
+                                    <span class="badge alert-info">CRMS</span>
+                                    <span class="badge alert-warning">TMS</span>                               
+                                    <span class="badge alert-danger">GRNS</span>                           
                                 </div>
                                 <h4 class="service-cost">$5,000/yr</h4>
                                 <button class="btn btn-success" id="3plBuyBtn" onclick="toggleModal();">Buy Now</button>
@@ -74,14 +78,15 @@
                     <div class="col-md-3">
                         <div class="thumbnail">
                             <img src="img/4pl.jpg" class="service-image" />
-                            <div class="caption">
+                            <div class="caption product-box">
                                 <h2 class="service-title">Package 4</h2>
-                                <div><br>This package is designed to suit the needs of Third and Fourth Party Logistics Service Providers (3PLs and 4PLs).</br>
-                                    <br>By subscribing to this package, your will gain access to the following systems:</br>
-                                    <br>CRMS</br>
-                                    <br>WMS</br>
-                                    <br>TMS</br>                               
-                                    <br>GRNS</br>                               
+                                <div class="product-description">
+                                    This package is designed to suit the needs of Third and Fourth Party Logistics Service Providers (3PLs and 4PLs).<br />
+                                    By subscribing to this package, your will gain access to the following systems:<br />
+                                    <span class="badge alert-info">CRMS</span>
+                                    <span class="badge alert-success">WMS</span>
+                                    <span class="badge alert-warning">TMS</span>                               
+                                    <span class="badge alert-danger">GRNS</span>                              
                                 </div>
                                 <h4 class="service-cost">6,000/yr</h4>
                                 <button class="btn btn-success" id="4plBuyBtn" onclick="toggleModal();">Buy Now</button>
